<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_medium_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_alert_bg"
    android:clipToOutline="true"
    android:outlineProvider="background"
    android:padding="12dp">

    <ImageView
        android:id="@+id/widget_medium_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/widget_alert_label"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/widget_medium_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/widget_medium_logo"
        android:layout_toEndOf="@id/widget_medium_logo"
        android:layout_marginStart="6dp"
        android:text="@string/widget_alert_label"
        android:textColor="@color/widget_text_primary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end" />

    <FrameLayout
        android:id="@+id/widget_medium_ring"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/widget_ring_green">

    <TextView
        android:id="@+id/widget_medium_metric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/widget_metric_value"
        android:textColor="@color/widget_text_primary"
        android:textSize="16sp"
        android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/widget_medium_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/widget_medium_ring"
        android:layout_marginStart="16dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/widget_attention_local"
        android:textColor="@color/widget_text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/widget_medium_info"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/widget_alert_label"
        android:src="@drawable/ic_widget_info"
        android:tint="@color/widget_icon_tint" />
</RelativeLayout>
